# llama-trainer

./: AUTHENTICATION_GUIDE.md  README.md  TRAINING_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
configs/: train.yaml
scripts/: authenticate_huggingface.py  check_dataset.py  prepare_chinese_corpus.py  validate_training_env.py
src/llama_trainer/: __init__.py  cli.py  config.py  dataset.py  modeling.py  serve.py  trainer.py
src/llama_trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py
