[project]
name = "llama-trainer"
version = "0.1.0"
description = "Production-ready Llama model training orchestration and utilities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llama", "training", "pytorch", "llm", "fine-tuning"]
authors = [
  { name = "Your Name", email = "you@example.com" }
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/your-org/llama-trainer"
Repository = "https://github.com/your-org/llama-trainer"

[project.optional-dependencies]
train = [
  "torch>=2.1.0",
  "transformers>=4.35.0",
  "accelerate>=1.14.0",
  "datasets>=2.15.0",
  "safetensors>=0.4.0",
  "peft>=0.5.0",
  "wandb>=0.15.0",
  "loguru>=0.7.0",
  "huggingface_hub>=0.17.0"
]
serve = [
  "fastapi>=0.103.0",
  "uvicorn>=0.23.0",
  "vllm>=0.1.0",
  "pydantic>=2.8.0"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
